modify godoc
